at Oct 19 14:02:03 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tdsstring.h:
	- Add CVS Id.

Fri Oct 18 22:20:15 EDT 2002	JK Lowden <jklowden@schemamania.org>
	* apps/freebcp.h
	  apps/tsql.c
	  dblib/unittests/t0019.c
	  odbc/unittests/common.c
	  odbc/unittests/common.h
	  odbc/unittests/t0001.c
	  odbc/unittests/t0002.c
	  odbc/unittests/t0003.c
	  odbc/unittests/t0004.c
	  odbc/connectparams.c
	  odbc/connectparams.h
	  pool/main.c
	  pool/member.c
	  pool/stream.c
	  pool/user.c
	  pool/util.c
	  server/unittest.c
	  replacements/atoll.c
	- added cvs Id string for all above files. (All *.[ch] have one now.)
	  
Fri Oct 18 20:25:42 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* TODO: updated
	* include/tdsstring.h src/tds/tdsstring.c:
	- fix portability problem (static inline in include)
	- fix side effect using macros
	* src/tds/iconv.c src/tds/read.c src/tds/tds.dox:
	* src/tds/token.c src/tds/write.c:
	- update documentation

Fri Oct 18 13:34:08 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tds_sysdep_public.h.in:
	- Better guess at 64-bit int for win32 native,
	  as suggested by jkl.

Fri Oct 18 13:29:18 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/.cvsignore:
	- Don't ignore tds_sysdep_private.h

Fri Oct 18 13:26:37 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tds_configs.h include/tds_sysdep_private.h:
	- Pull in freetds_sysconfdir.h from tds_configs.h

Fri Oct 18 13:18:34 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in include/Makefile.am
	  include/tds_sysdep_private.h (added)
	  include/tds_sysdep_private.h.in (removed):
	- Conform to GNU coding standards when dealing with sysconfdir.

Fri Oct 18 19:03:50 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/freebcp.c src/odbc/convert_sql2string.c:
	* src/odbc/convert_tds2sql.c src/odbc/odbc.c:
	* src/pool/util.c src/tds/iconv.c src/tds/read.c:
	- fix some warnings compiling with -Wall (some was error)
